# rrr

./: Cargo.toml  Dockerfile  analisys  do_send.sh  old_script.lua  robot  script.lua  script.lua.bac  send_loop.sh  set_permissions.sh  values.lua
.cargo/: config
src/: graph.rs  joystick.rs  json.bac  line.rs  line_testing.rs  lua_function_list  main.rs  points.json  script.lua
