[package]
name = "rrr"
version = "0.1.0"
authors = ["TpouHuK <ilovepotatoj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.16.3"
ev3dev-lang-rust = "0.4.1"
vec2d = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.4.13"
# lazy_static = "1.3.0"
